webcleaner (0.43) unstable; urgency=low

  * wc/parser/htmllex.l: fix segfault with unterminated end tags

 -- Bastian Kleineidam <calvin@debian.org>  Mon,  3 Jun 2002 21:00:19 +0200

webcleaner (0.42) unstable; urgency=low

  * wc/parser/htmllex.l: match doctype case insensitive
  * wc/filter/Rules.py: use search(), not match() for url matching
  * config/adverts.zap: added imdb and osdn ad-remover

 -- Bastian Kleineidam <calvin@debian.org>  Sun,  2 Jun 2002 22:18:17 +0200

webcleaner (0.41) unstable; urgency=low

  * wc/parser/htmllex.l:
    - fix sequential parsing of tags with numbers
    - fix resetting of bufpos
  * wc/filter/Compress.py: set modification time on each gzip-compress
  * wc/filter/Blocker.py: added more image extensions in regex

 -- Bastian Kleineidam <calvin@debian.org>  Sun,  2 Jun 2002 15:23:51 +0200

webcleaner (0.40) unstable; urgency=low

  * wc/filter/Rules.py: attribute names or values can be None
  * wc/parser/htmllex.l:
    catch stray newlines in attribute parsing
    throw exception if attribute or tag name is NULL
    use full option instead of fast

 -- Bastian Kleineidam <calvin@debian.org>  Sun,  2 Jun 2002 11:37:13 +0200

webcleaner (0.39) unstable; urgency=low

  * wc/parser/: various fixes for HTML comment and tag parsing
  * debian/logrotate: stop and start daemon on log rotating
  * wc/filter/Compress.py: flush with Z_FINISH
  * wc/filter/__init__.py: only call filter function with non-empty data

 -- Bastian Kleineidam <calvin@debian.org>  Sun,  2 Jun 2002 00:07:01 +0200

webcleaner (0.38) unstable; urgency=low

  * rewrite of the HTML parser module; libxml is not needed anymore.
  * quote attr values in XML (SF bug#555045)
  * include forgotten source files in MANIFEST.in

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 29 May 2002 00:03:35 +0200

webcleaner (0.37) unstable; urgency=low

  * wc/filter/Rewriter.py: use correct rules variable in get_attrs. This
    prevents accidently deletion of comments.